Bug 150715 - Animations in LO Impress do not work properly
Summary: Animations in LO Impress do not work properly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-08-31 07:50 UTC by fannylinn.kraft
Modified: 2022-10-05 03:05 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description fannylinn.kraft 2022-08-31 07:50:30 UTC
Description:
Hello,
When I try to use free form Motion Paths in animations I come across a very annoying issue. The motion path ends up far away from the object that I selected when creating the animation, and I cannot move the Motion Path to where I want it. The motion path line moves but the actual animation stays where it was originally drawn. Usually the motion paths ends up quite far to the right and down slightly from where I drew it, often even outside the slide in the grey area around it. Pre-drawn Motion Paths almost work, but they are glitchy. Also, I cannot use the pre-drawn paths because most of them only go toward the right and I need the animation to go towards the bottom left.

I am using the latest version of the software (7.4) and I have tried this with both pptx and odp formats. I have tried adding animations to png images, text, and icons, and the issue is the same for all.

Hope this can be fixed.

Best,
Fanny

Steps to Reproduce:
1. Insert image into a slide
2. Add a motion path animation (Free-form line)
3. Preview the animation or view as slide show

Actual Results:
The animation does not work, often the image completely disappears as the animation has ended up outside the slide window. 

Expected Results:
The picture should move along a line where I drew it.


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
[Information automatically included from LibreOffice]
Locale: en-GB
Module: PresentationDocument
[Information guessed from browser]
OS: Windows (All)
OS is 64bit: no
Comment 1 raal 2022-09-10 15:40:29 UTC
The motion path is moving right down. This seems to have begun at the below commit.
Adding Cc: to Noel Grandin ; Could you possibly take a look at this one?
Thanks
 e0ce3c9287142ff2a4fa366eca9afa12e01e34c4 is the first bad commit
commit e0ce3c9287142ff2a4fa366eca9afa12e01e34c4
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Sun Dec 5 08:42:56 2021 +0100

    source 7c52337f9517135db13d75ecbbc10d7e26e01489

https://git.libreoffice.org/core/+/7c52337f9517135db13d75ecbbc10d7e26e01489
Comment 2 Commit Notification 2022-09-25 17:10:11 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/916d30ba7e8a5293f57ec04258f6c3839736295e

tdf#150715 Animations in LO Impress do not work properly

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-09-26 10:20:06 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/8c9785c2aae779dadd1c7e152a4efd5c7f149bff

tdf#150715 Animations in LO Impress do not work properly

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-10-04 11:15:46 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-4-2":

https://git.libreoffice.org/core/commit/6a8dd4b0e832793bddc1c16ce5586decd1f52d8e

tdf#150715 Animations in LO Impress do not work properly

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.