tdf#150715 Animations in LO Impress do not work properly

Revert "updatePathFromSdrPathObj can just call getRange"
This reverts commit 7c52337f9517135db13d75ecbbc10d7e26e01489.

Not sure why this change did not work.

Change-Id: I2c42b9b7ff4b85f3018bea289efd3d934dbe2be1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140570
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>