sd/source/core/CustomAnimationEffect.cxx
@@ -1606,8 +1606,10 @@ void CustomAnimationEffect::updatePathFromSdrPathObj( const SdrPathObj& rPathObj
     {
         ::tools::Rectangle aBoundRect(0,0,0,0);
 
+        drawinglayer::primitive2d::Primitive2DContainer xPrimitives;
+        pObj->GetViewContact().getViewIndependentPrimitive2DContainer(xPrimitives);
         const drawinglayer::geometry::ViewInformation2D aViewInformation2D;
-        const basegfx::B2DRange aRange = pObj->GetViewContact().getRange(aViewInformation2D);
+        const basegfx::B2DRange aRange(xPrimitives.getB2DRange(aViewInformation2D));
 
         if(!aRange.isEmpty())
         {
